# AuditLayer

./: .gitignore  .prettierignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
conformance-vectors/: README.md
conformance-vectors/cases/: 11-audit-entry-input.json  12-unicode-nfc-vs-nfd.json  13-explicit-null-vs-absent.json  15-utf16-supplementary-plane-sort.json  16-line-and-paragraph-separators.json
conformance-vectors/runners/ts/: package.json  run.ts
docs/: README.md  architecture.md  cli.md  configuration.md  conformance.md  pii-redaction.md  providers.md  quickstart.md  schema.md  signing-keys.md  storage-backends.md
examples/credit-decision/: package.json
examples/credit-decision/src/: config.ts  index.ts
examples/healthcare-triage/: package.json
examples/healthcare-triage/src/: config.ts  index.ts
examples/resume-screening/: package.json
examples/resume-screening/src/: config.ts  index.ts
legal/: README.md  aup.md  dpa.md  incident-response.md  limitations.md  marketing-checklist.md  privacy.md  security.md  sub-processors.md  terms.md
python/: README.md  pyproject.toml
python/examples/: .gitignore  resume_screening.py
python/src/auditlayer/: logger.py
python/src/auditlayer/cli/: __init__.py  __main__.py  main.py
python/src/auditlayer/providers/: __init__.py  anthropic.py  anthropic_async.py  openai_async.py  registry.py
python/src/auditlayer/schema/: types.py
python/src/vouchrail/: __init__.py  logger.py  pii_patterns.py
python/src/vouchrail/providers/: _shared.py  anthropic.py  anthropic_async.py  openai.py  openai_async.py  registry.py
python/src/vouchrail/schema/: types.py
python/src/vouchrail/signers/: inline.py
python/src/vouchrail/storage/: local_fs.py
python/tests/: test_async_wrap.py  test_case_and_track.py  test_cli.py  test_local_backend.py  test_logger.py  test_sqlite_pii.py  test_version.py
