[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vouchrail"
version = "0.1.0"
description = "VouchRail SDK — EU AI Act Article 12 tamper-evident audit logs (Python parity)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "VouchRail Contributors" }]
keywords = [
    "eu-ai-act",
    "article-12",
    "audit-log",
    "compliance",
    "tamper-evident",
    "hash-chain",
    "anthropic",
    "openai",
    "llm",
    "gdpr",
    "pii",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai = ["openai>=1.0"]
s3 = ["boto3>=1.34"]
sqlite = []  # stdlib
all = ["anthropic>=0.20", "openai>=1.0", "boto3>=1.34"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jeffry1829/VouchRail"
Repository = "https://github.com/jeffry1829/VouchRail"
Issues = "https://github.com/jeffry1829/VouchRail/issues"

[project.scripts]
vouchrail = "vouchrail.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vouchrail"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
